--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/BYWithdrawConfirmVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/BYWithdrawConfirmVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -45,20 +45,20 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bkB-LB-dGd">
-                            <rect key="frame" x="0.0" y="62" width="414" height="1"/>
-                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            <rect key="frame" x="0.0" y="62" width="414" height="0.5"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.30484862648761335" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="1" id="twX-gz-Uta"/>
+                                <constraint firstAttribute="height" constant="0.5" id="twX-gz-Uta"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="可提现金额 (USDT)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zxq-1K-PH4">
-                            <rect key="frame" x="30" y="88" width="139" height="22.5"/>
+                            <rect key="frame" x="30" y="87.5" width="139" height="22.5"/>
                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="16"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9T6-XY-FTI">
-                            <rect key="frame" x="30" y="115.5" width="15.5" height="37"/>
+                            <rect key="frame" x="30" y="115" width="15.5" height="37"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="37" id="q6T-bP-8TI"/>
                             </constraints>
@@ -67,21 +67,21 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bDZ-Rq-xvS" customClass="CNAmountInputView">
-                            <rect key="frame" x="30" y="152.5" width="354" height="89"/>
+                            <rect key="frame" x="30" y="152" width="354" height="89"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="89" id="fKq-Uj-DSc"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rxu-98-RT4" customClass="CNCodeInputView">
-                            <rect key="frame" x="30" y="241.5" width="354" height="89"/>
+                            <rect key="frame" x="30" y="241" width="354" height="89"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="89" id="W1W-O6-Rv0"/>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Olv-oT-koH" customClass="CNTwoStatusBtn">
-                            <rect key="frame" x="30" y="370.5" width="354" height="48"/>
+                            <rect key="frame" x="30" y="370" width="354" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="48" id="bTS-Qz-xDI"/>
                             </constraints>
@@ -91,7 +91,7 @@
                             </connections>
                         </button>
                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DHV-0J-ZGJ">
-                            <rect key="frame" x="0.0" y="63" width="414" height="387"/>
+                            <rect key="frame" x="0.0" y="62.5" width="414" height="387.5"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cg-1" translatesAutoresizingMaskIntoConstraints="NO" id="Hqu-UN-OBJ">
                                     <rect key="frame" x="154.5" y="50" width="105" height="86"/>
@@ -130,11 +130,11 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXz-dz-Aa7" customClass="BYGradientButton">
-                                    <rect key="frame" x="28" y="301" width="171" height="50"/>
+                                    <rect key="frame" x="28" y="301.5" width="171" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="AWM-rv-hiM"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="18"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="18"/>
                                     <state key="normal" title="联系客服">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </state>
@@ -154,7 +154,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXX-av-Hrx" customClass="BYGradientButton">
-                                    <rect key="frame" x="219" y="301" width="167" height="50"/>
+                                    <rect key="frame" x="219" y="301.5" width="167" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="IhZ-p2-afo"/>
                                     </constraints>
