--- a/HYNewNest/Features(主代码)/HomeComponent/View/CNUserInfoLoginView.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/View/CNUserInfoLoginView.xib
@@ -51,15 +51,15 @@
                             </constraints>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vip1" translatesAutoresizingMaskIntoConstraints="NO" id="e1n-OH-5Tm">
-                            <rect key="frame" x="124" y="14" width="42" height="18"/>
+                            <rect key="frame" x="130" y="13.5" width="42" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="42" id="Glo-nW-mGn"/>
                                 <constraint firstAttribute="height" constant="18" id="pJb-7G-oQu"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="用户名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vHg-RI-kbC">
-                            <rect key="frame" x="77" y="15" width="42" height="20"/>
-                            <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="14"/>
+                            <rect key="frame" x="77" y="13" width="48" height="22.5"/>
+                            <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="16"/>
                             <color key="textColor" red="0.098039215686274508" green="0.80784313725490198" blue="0.80784313725490198" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -102,7 +102,7 @@
                         <constraint firstItem="UML-xs-Jw0" firstAttribute="top" secondItem="sLZ-3h-qrV" secondAttribute="top" constant="15" id="roJ-sw-cXv"/>
                         <constraint firstItem="otD-ws-LfD" firstAttribute="leading" secondItem="oAS-o1-hZh" secondAttribute="trailing" constant="3" id="tPn-WL-mX0"/>
                         <constraint firstAttribute="trailing" secondItem="WLz-tL-cWV" secondAttribute="trailing" constant="13" id="wgQ-ut-KvB"/>
-                        <constraint firstItem="vHg-RI-kbC" firstAttribute="top" secondItem="UML-xs-Jw0" secondAttribute="top" id="x9R-H1-htJ"/>
+                        <constraint firstItem="vHg-RI-kbC" firstAttribute="top" secondItem="UML-xs-Jw0" secondAttribute="top" constant="-2" id="x9R-H1-htJ"/>
                     </constraints>
                 </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GBy-vV-Zaw">
