--- a/HYNewNest/Features(主代码)/WalletComponent/BankCardComponent/Controller/CNAddBankCardVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/BankCardComponent/Controller/CNAddBankCardVC.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,6 +14,7 @@
                 <outlet property="accountView" destination="Lpu-Ty-Wu5" id="kJ8-FF-ycY"/>
                 <outlet property="areaTF" destination="WlO-nY-UUt" id="3Ld-fY-TbI"/>
                 <outlet property="bankNameTF" destination="aG9-k4-8vL" id="Pre-AA-5oj"/>
+                <outlet property="btmtipsLb" destination="nPP-Zv-AVK" id="B3R-Ev-eZ6"/>
                 <outlet property="cardIcon" destination="U48-Mp-YB1" id="BHD-e3-EQB"/>
                 <outlet property="cardIconSpace" destination="vNe-jZ-Tp4" id="2Qo-0X-SVr"/>
                 <outlet property="cardIconW" destination="u7y-DU-ZT9" id="I2U-hl-F9M"/>
@@ -29,7 +31,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CMG-Mn-bfz" customClass="CNTwoStatusBtn">
-                    <rect key="frame" x="15" y="789" width="384" height="48"/>
+                    <rect key="frame" x="15" y="763" width="384" height="48"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="48" id="fGu-hX-TpB"/>
                     </constraints>
@@ -85,7 +87,7 @@
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eH1-dD-urC" customClass="CNLineView">
                             <rect key="frame" x="0.0" y="74" width="384" height="1"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="xyp-1G-KqJ"/>
                             </constraints>
@@ -133,7 +135,7 @@
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z1n-YY-xS6" customClass="CNLineView">
                             <rect key="frame" x="0.0" y="74" width="384" height="1"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="WoL-6O-Thw"/>
                             </constraints>
@@ -182,7 +184,7 @@
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cff-eW-rMD" customClass="CNLineView">
                             <rect key="frame" x="0.0" y="74" width="384" height="1"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="5TM-dB-UsO"/>
                             </constraints>
@@ -218,7 +220,21 @@
                         <constraint firstAttribute="height" constant="75" id="feH-1p-hBu"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nPP-Zv-AVK">
+                    <rect key="frame" x="0.0" y="832" width="414" height="14"/>
+                    <attributedString key="attributedText">
+                        <fragment content="CNY充值时，付款人姓名必须和银行卡绑定姓名一致">
+                            <attributes>
+                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                <font key="NSFont" size="12" name="PingFangSC"/>
+                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                            </attributes>
+                        </fragment>
+                    </attributedString>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Lpu-Ty-Wu5" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="0t1-k7-5Cg"/>
@@ -232,10 +248,13 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="ljC-Md-xMa" secondAttribute="trailing" constant="15" id="Ad5-Iy-rDN"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="7JG-qp-iX8" secondAttribute="trailing" constant="15" id="Ba1-yZ-pTE"/>
                 <constraint firstItem="ljC-Md-xMa" firstAttribute="top" secondItem="NA1-ca-qVu" secondAttribute="bottom" id="UDz-ke-LVY"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="CMG-Mn-bfz" secondAttribute="bottom" constant="25" id="Vso-yd-3Xh"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="CMG-Mn-bfz" secondAttribute="bottom" constant="51" id="Vso-yd-3Xh"/>
                 <constraint firstItem="kDs-z9-8rh" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="Wxj-oH-gpL"/>
+                <constraint firstItem="nPP-Zv-AVK" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="XLi-Z3-qU5"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="nPP-Zv-AVK" secondAttribute="trailing" id="ZLa-O8-xft"/>
                 <constraint firstItem="NA1-ca-qVu" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="adD-ee-aVQ"/>
                 <constraint firstItem="CMG-Mn-bfz" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="b9P-q1-QHG"/>
+                <constraint firstItem="nPP-Zv-AVK" firstAttribute="top" secondItem="CMG-Mn-bfz" secondAttribute="bottom" constant="21" id="dyP-Le-aP9"/>
                 <constraint firstItem="F0b-Mv-R90" firstAttribute="top" secondItem="kDs-z9-8rh" secondAttribute="bottom" id="fk0-iN-VGN"/>
                 <constraint firstItem="NA1-ca-qVu" firstAttribute="top" secondItem="Lpu-Ty-Wu5" secondAttribute="bottom" id="iJY-Sw-LWa"/>
                 <constraint firstItem="kDs-z9-8rh" firstAttribute="top" secondItem="ljC-Md-xMa" secondAttribute="bottom" id="kyd-oX-Xnw"/>
@@ -243,11 +262,13 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="F0b-Mv-R90" secondAttribute="trailing" constant="15" id="vSF-dI-vbR"/>
                 <constraint firstItem="ljC-Md-xMa" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="wdM-Em-I57"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="137.68115942028987" y="145.98214285714286"/>
         </view>
     </objects>
     <resources>
         <image name="go" width="8" height="13"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
