--- a/HYNewNest/Features(主代码)/MeComponent/Controller/BYBindRealNameVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/BYBindRealNameVC.xib
@@ -55,17 +55,17 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5VF-HB-t9B">
                             <rect key="frame" x="0.0" y="62.5" width="414" height="154.5"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="付款人姓名必須和銀行卡一致，请认真填写" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AfQ-Id-Ptf">
-                                    <rect key="frame" x="0.0" y="18" width="414" height="12"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="首次转账支付，需绑定您的真实姓名，绑定后不可修改，且必须和提款银行卡姓名一致" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AfQ-Id-Ptf">
+                                    <rect key="frame" x="20" y="18" width="374" height="40"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="12" id="kS9-14-VnL"/>
+                                        <constraint firstAttribute="height" constant="40" id="kS9-14-VnL"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t8V-uv-ckN" customClass="CNNormalInputView">
-                                    <rect key="frame" x="30" y="30" width="354" height="89"/>
+                                    <rect key="frame" x="30" y="58" width="354" height="89"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="89" id="58V-ir-zNS"/>
@@ -74,8 +74,8 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="AfQ-Id-Ptf" secondAttribute="trailing" id="73J-7u-fh3"/>
-                                <constraint firstItem="AfQ-Id-Ptf" firstAttribute="leading" secondItem="5VF-HB-t9B" secondAttribute="leading" id="Gf8-HL-RMs"/>
+                                <constraint firstAttribute="trailing" secondItem="AfQ-Id-Ptf" secondAttribute="trailing" constant="20" id="73J-7u-fh3"/>
+                                <constraint firstItem="AfQ-Id-Ptf" firstAttribute="leading" secondItem="5VF-HB-t9B" secondAttribute="leading" constant="20" id="Gf8-HL-RMs"/>
                                 <constraint firstAttribute="trailing" secondItem="t8V-uv-ckN" secondAttribute="trailing" constant="30" id="GmZ-CI-CAB"/>
                                 <constraint firstItem="t8V-uv-ckN" firstAttribute="leading" secondItem="5VF-HB-t9B" secondAttribute="leading" constant="30" id="I6C-SG-zJs"/>
                                 <constraint firstItem="AfQ-Id-Ptf" firstAttribute="top" secondItem="5VF-HB-t9B" secondAttribute="top" constant="18" id="gaU-bm-KUH"/>
